# PDFKit

./: .env.example  .gitignore  CHANGELOG.md  README.md  install.ps1  pyproject.toml
.claude/: CLAUDE.md  claude.md  settings.local.json
docs/: code_audit_report.md  code_audit_report_2026-01-03.md  mcp_expansion_plan.md  mcp_tools_reference.md  pdfkit_plan.md
pdfkit/: __init__.py  __main__.py  cli.py
pdfkit/ai/: __init__.py  extract.py  formula_extractor.py  formula_prompt.py  image_detection_prompt.py  image_extractor.py  image_translator.py  markdown_translator.py  prompt_builder.py  qwen_mt_translator.py  translator.py  uploader.py
pdfkit/commands/: __init__.py  ai.py  batch.py  bookmark.py  convert.py  delete.py  dewatermark.py  edit.py  extract.py  footer.py  header.py  info.py  merge.py  ocr.py  optimize.py  reorder.py  reverse.py  rotate.py  search.py  security.py  split.py
pdfkit/core/: __init__.py  ocr_handler.py  pdf_convert.py  pdf_edit.py  pdf_extract.py  pdf_header.py  pdf_info.py  pdf_merge.py  pdf_optimize.py  pdf_security.py  pdf_split.py  watermark_remover.py
pdfkit/mcp/: __init__.py  errors.py  messages.py  schemas.py  server.py  timeout.py  utils.py  validators.py
pdfkit/mcp/tools/: __init__.py  convert_tools.py  edit_tools.py  ocr_tools.py  page_tools.py  security_optimize_tools.py
pdfkit/styles/: __init__.py  colors.py
pdfkit/utils/: __init__.py  config.py  console.py  file_utils.py  platform.py  shimmer_column.py  shimmer_progress.py  validators.py
scripts/: count_lines.sh  disk_usage.sh  install.sh  setup.ps1  setup.sh
templates/ai/: idcard_template.json  invoice_template.json  resume_template.json
templates/examples/: legal_terms_zh_en.csv  medical_terms_en_zh.csv  tech_terms_en_zh.csv
tests/: __init__.py  conftest.py  test_ai.py  test_ai_extract_images.py  test_ai_formula.py  test_ai_translate.py  test_info.py  test_search.py  test_utils.py  test_validators.py
tests/test_mcp/: __init__.py  conftest.py
tests/test_mcp/test_core/: test_pdf_convert.py  test_pdf_merge.py  test_pdf_split.py
tests/test_mcp/test_tools/: test_convert_tools.py  test_ocr_tools.py  test_page_tools.py  test_security_optimize_tools.py
